--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="md_theme_background">#FFFFFF</color>
+    <color name="background_light_gray">#F4F4F4</color>
+    <color name="light_stroke_gray">#DDDDDD</color>
+        <color name="gray_background">#E0E0E0</color>
+        <color name="gray_card">#F5F5F5</color>
+        <color name="gray_border">#CCCCCC</color>
+        <color name="button_gray">#BDBDBD</color>
+        <color name="text_dark">#212121</color>
+
 
 </resources>
