adding animation while opening the table activity

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -88,7 +88,7 @@
         </androidx.cardview.widget.CardView>
 
         <!-- Cart List -->
-        <androidx.recyclerview.widget.RecyclerView
+        <ListView
             android:id="@+id/cartList"
             android:layout_width="match_parent"
             android:layout_height="418dp"
